# MMM

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
assets/: fonts.css
components/: __init__.py  chart_theme.py  ids.py  kpi_card.py  layout.py
data/: __init__.py  loader.py  mmm_idata.sha256  mmm_sampler_config.json
model/: __init__.py  mmm.py  sampling_progress.py
pages/: __init__.py  contributions.py  optimiser.py  overview.py  response_curves.py
